# tokenize

./: .gitignore  CHANGELOG.md  LICENSE  README.md  tokenize.cabal
.github/workflows/: haskell-ci.yml  stack.yml
src/NLP/: Tokenize.hs
src/NLP/Tokenize/: String.hs  Text.hs
tests/src/: Bench.hs
