cabal-version:       >=1.10
name:                tokenize
version:             0.3.0.1

synopsis:            Simple tokenizer for English text
description:         Simple tokenizer for English text.
license:             BSD3
license-file:        LICENSE
author:              Grzegorz Chrupała
maintainer:          Andreas Abel
homepage:            https://github.com/haskell/tokenize
bug-reports:         https://github.com/haskell/tokenize/issues
category:            Natural Language Processing
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/haskell/tokenize

library
 hs-source-dirs:     src
 exposed-modules:
   NLP.Tokenize
   NLP.Tokenize.Text
   NLP.Tokenize.String

  -- Packages needed in order to build this package.
 build-depends:
     base >= 4 && < 5
   , split >= 0.1
   , text

 default-language:   Haskell2010

benchmark bench
   type:             exitcode-stdio-1.0
   main-is:          Bench.hs
   hs-source-dirs:   tests/src

   build-depends:
       tokenize
     , base
     , bytestring
     , criterion < 1
     , deepseq
     , filepath >= 1.3.0.1
     , split >= 0.1.2.3
     , text >= 0.11.3.0

   default-language: Haskell2010
   ghc-options:      -Wall -main-is Bench
